# InsightDebugger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt  debuggerui.qrc
plugin/inc/: ServiceLocator.h  plugin.h  widgets.h
plugin/src/: DebuggerWidget.cpp  DebuggerWidgetManager.cpp  DebuggerWidgetType.cpp  Session.cpp  SessionManager.cpp  UIObserver.cpp  plugin.cpp
plugin/src/Widgets/: Controls.cpp  Registers.cpp
